UF-10001: Add municipalityId
